mixin for sections styling added, img visible from @tablet width added, top-nav is now fixed, footer is sticky, hamburger icon disappears and links are shown instead from @tablet width and up

--- a/css/index.css
+++ b/css/index.css
@@ -210,11 +210,18 @@ a {
 div.topnav {
   overflow: hidden;
   background-color: #5193b3;
-  position: relative;
+  max-width: 750px;
+  padding: 0 5%;
+  margin: 0 auto;
+  position: fixed;
+  top: 0;
+  right: 0%;
+  left: 0;
+  z-index: 1;
   /* Style Logo */
   /* Hide the links inside the navigation menu (except for logo/home) */
   /* Style navigation menu links */
-  /* Style the hamburger menu */
+  /* hamburger menu */
   /* Add a grey background color on mouse-over */
 }
 div.topnav img.logo {
@@ -246,21 +253,42 @@ div.topnav h1 {
 div.topnav #myLinks {
   display: none;
 }
+@media (min-width: 980px) {
+  div.topnav #myLinks {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    position: absolute;
+    /*margin-top: -10.5%;*/
+    top: -0.3rem;
+    right: 0rem;
+  }
+}
 div.topnav a {
   color: white;
   padding: 1.4rem 1.6rem;
   text-decoration: none;
   display: block;
 }
+@media (min-width: 980px) {
+  div.topnav a a.about-us {
+    margin-left: 5%;
+  }
+}
 div.topnav a.icon {
   background-color: #5193b3;
   color: whitesmoke;
   display: block;
   position: absolute;
-  right: 0.7rem;
+  right: 5%;
   top: 0.9rem;
   padding: 0;
   height: 100%;
+}
+@media (min-width: 980px) {
+  div.topnav a.icon {
+    display: none;
+  }
 }
 div.topnav i.fa.fa-bars {
   font-size: 2rem;
@@ -269,7 +297,7 @@ footer {
   background: #5193b3;
   color: whitesmoke;
   width: 100%;
-  height: 4rem;
+  position: relative;
   bottom: 0;
 }
 footer p {
@@ -302,9 +330,9 @@ html body div.container header section.call-to-action {
   text-align: center;
   width: 100%;
   margin-bottom: 5%;
+  color: whitesmoke;
 }
 html body div.container header section.call-to-action h1 {
-  color: whitesmoke;
   margin: 10% 5% auto;
   width: 90%;
   font-weight: bold;
@@ -312,7 +340,6 @@ html body div.container header section.call-to-action h1 {
   padding-bottom: 10%;
 }
 html body div.container header section.call-to-action p {
-  color: whitesmoke;
   font-size: 1rem;
   line-height: 1.5em;
   width: 80%;
@@ -324,40 +351,52 @@ html body div.container header section.call-to-action div.button {
   height: 50%;
   display: flex;
   align-items: center;
-  margin: 10%;
+  margin: 5%;
   border: 4px solid whitesmoke;
+  color: whitesmoke;
 }
 html body div.container header section.call-to-action div.button a {
   text-align: center;
-  color: whitesmoke;
   font-size: 1.3rem;
   align-self: center;
   justify-self: center;
   margin: auto;
   font-weight: bold;
   padding: 8%;
+  color: whitesmoke;
   text-decoration: none;
 }
 html body div.container header section.call-to-action div.button:hover {
   background: #44b1b0;
 }
+html body div.container header section.call-to-action img {
+  display: none;
+  margin-bottom: 5%;
+}
+@media (min-width: 757px) {
+  html body div.container header section.call-to-action img {
+    display: flex;
+    border: 4.5px solid #98bfd2;
+    border-radius: 8px;
+  }
+}
 html body div.container section.features {
   width: 90%;
   height: 50%;
-  margin: 10% auto;
+  margin: 7% auto;
   display: flex;
   flex-direction: column;
+  color: #407791;
 }
 html body div.container section.features h2 {
-  margin-bottom: 10%;
+  margin-bottom: 5%;
   font-weight: bold;
   text-align: center;
-  color: #5193b3;
 }
 html body div.container section.features h3 {
   text-align: center;
   line-height: 2rem;
-  color: #5193b3;
+  margin-bottom: 4%;
 }
 html body div.container section.features ul {
   max-width: 90%;
@@ -366,8 +405,30 @@ html body div.container section.features ul {
 html body div.container section.features li {
   line-height: 2.3rem;
   margin-top: 3%;
-  color: #5193b3;
 }
-html body div.container section.features p.icon-solid::before {
-  color: #64c4c3;
+html body div.container section.one {
+  width: 90%;
+  height: 50%;
+  margin: 7% auto;
+  display: flex;
+  flex-direction: column;
+  color: #407791;
+}
+html body div.container section.one h2 {
+  margin-bottom: 5%;
+  font-weight: bold;
+  text-align: center;
+}
+html body div.container section.one h3 {
+  text-align: center;
+  line-height: 2rem;
+  margin-bottom: 4%;
+}
+html body div.container section.one ul {
+  max-width: 90%;
+  margin: 0  auto;
+}
+html body div.container section.one li {
+  line-height: 2.3rem;
+  margin-top: 3%;
 }
