--- a/less/footer.less
+++ b/less/footer.less
@@ -2,7 +2,7 @@ footer {
     background: @blue;
     color: @white;
     width: 100%;
-    height: 4rem;
+    position: relative;
     bottom: 0;
 
     p {
