--- a/less/homepage.less
+++ b/less/homepage.less
@@ -12,12 +12,12 @@ html {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: @white;
+      background: @main-bg;
       width: 100%;
       min-width: 0px;
 
       header {
-        background: @blue;
+        background: @header-bg;
         width: 100%;
 
       
@@ -28,9 +28,9 @@ html {
           .center();
           width: 100%;
           margin-bottom: 5%;
+          color: @white-text;
 
           h1 {
-            color: @white;
             margin: 10% 5% auto;
             width: 90%;
             font-weight: bold;
@@ -38,7 +38,6 @@ html {
             padding-bottom: 10%;
           }
           p {
-            color: @white;
             font-size: 1rem;
             line-height: 1.5em;
             width: 80%;
@@ -51,18 +50,19 @@ html {
             height: 50%;
             display: flex;
             align-items: center;
-            margin: 10%;
+            margin: 5%;
             border: 4px solid @white;
+            color: @white-text;
 
             a {
               text-align: center;
-              color: @white;
               font-size: 1.3rem;
               align-self: center;
               justify-self: center;
               margin: auto;
               font-weight: bold;
               padding: 8%;
+              color: @white-text;
               text-decoration: none;
             }
           }
@@ -70,44 +70,28 @@ html {
           div.button:hover {
             background: darken(@green, 10%);
           }
+
+          img{
+            display: none;
+            margin-bottom: 5%;
+
+            @media @tablet{
+              display: flex;
+              border: 4.5px solid lighten(@blue, 20%);
+              border-radius: 8px;
+            }
+          }
         } // end call to action */
       } // end header
 
       section.features {
-        width: 90%;
-        height: 50%;
-        margin: 10% auto;
-        display: flex;
-        flex-direction: column;
-        
+        .section(90%, 50%);
+              
 
-        h2 {
-          margin-bottom: 10%;
-          font-weight: bold;
-          text-align: center;
-          color: @blue;
-        }
-        h3{
-            text-align: center;
-            line-height: 2rem;
-            color: @blue;
-        }
-        ul {
-            max-width: 90%;
-            margin: 0  auto;
-            
-        }
+      } // end features
 
-        li {
-          line-height: 2.3rem;
-          margin-top: 3%;
-          color: @blue;
-          
-          
-        }
-        p.icon-solid::before {
-          color: @green;
-        }
+      section.one{
+        .section(90%, 50%);
       }
       
     } // end container
