--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,3 +6,36 @@
     place-content: center;
     text-align: center;
   }
+
+  .section(@width, @height){
+    width: @width;
+    height: @height;
+    margin: 7% auto;
+    display: flex;
+    flex-direction: column;
+    color: darken(@blue-txt, 10%);
+
+    h2 {
+      margin-bottom: 5%;
+      font-weight: bold;
+      text-align: center;
+      
+    }
+    h3{
+        text-align: center;
+        line-height: 2rem;
+        margin-bottom: 4%;
+    }
+    ul {
+        max-width: 90%;
+        margin: 0  auto;
+        
+    }
+
+    li {
+      line-height: 2.3rem;
+      margin-top: 3%;
+      
+    }
+
+  }
