--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,9 @@
 @main-bg: @white;
 @header-bg: @blue;
 @button-accent: @green;
+@icon-accent:@green;
+@blue-txt:@blue;
+@white-text: @white;
 
 
 /*variables.less*/
@@ -17,7 +20,8 @@
 
 
 /* screen widths */
-@tablet: ~"(min-width: 600px)";
+@desktop: ~"(min-width: 980px)";
+@tablet: ~"(min-width: 757px)"; 
 @mobile: ~"(min-width: 500px)";
 @small-mobile: ~"(min-width: 314px)";
 @firefox-minimum-width: ~"(min-width: 288px)";
